--- a/index.html
+++ b/index.html
@@ -25,26 +25,24 @@
 
   <body>
     <div class="container">
-      <header>
-        <div class="header-container">
-          <div class="header-wrapper">
-            <h1>Robert Houck</h1>
-            <p>phone:(1) 4## 3#3#</p>
+      <header class="header-container">
+        <div class="header-wrapper">
+          <h1>Robert Houck</h1>
+          <p>phone:(1) 4## 3#3#</p>
 
-            <p>email: robbhouck@gmail.com</p>
-          </div>
-          <div class="nav-wrapper">
-            <nav>
-              <a href="#">Home</a>
-              <a href="#">About</a>
-              <a href="#">Portfolio</a>
-              <a href="#">Contact</a>
-            </nav>
-          </div>
-          <!-- <div class="portrait"> -->
-          <!-- <img src="images/rob-charlie.jpg" />
-          </div> -->
+          <p>email: robbhouck@gmail.com</p>
         </div>
+        <div class="nav-wrapper">
+          <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+          </nav>
+        </div>
+        <!-- <div class="portrait"> -->
+        <!-- <img src="images/rob-charlie.jpg" />
+          </div> -->
       </header>
       <section class="intro">
         <div class="work-card intro">
